<?xml version="1.0" encoding="UTF-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/enter_name_view"
            style="@style/GeneralLayoutStyle"
            android:inputType="textCapWords"
            android:hint="@string/customer_name"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <LinearLayout
            style="@style/GeneralLayoutStyle">
            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/whipped_cream"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/GeneralLayoutStyle">

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/chocolate"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>


        <LinearLayout
            style="@style/GeneralLayoutStyle">

            <Button
                style="@style/IncrementButtonStyle"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_gravity="center"
                android:text="1"
                style="@style/HeaderTextStyle"/>

            <Button
                style="@style/IncrementButtonStyle"
                android:onClick="increment"
                android:text="+"/>

        </LinearLayout>

        <Button
            android:text="@string/order_button"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder" />


    </LinearLayout>
</ScrollView>